RESOLVED FIXED315440
Back button not enabled on sciencedirect.com to support Safari's "Close and return to ..." feature for new windows
https://bugs.webkit.org/show_bug.cgi?id=315440
Summary Back button not enabled on sciencedirect.com to support Safari's "Close and r...
Brady Eidson
Reported 2026-05-23 20:44:41 PDT
Back button not enabled on sciencedirect.com to support Safari's "Close and return to ..." feature for new windows
Attachments
Brady Eidson
Comment 1 2026-05-23 20:44:42 PDT
Brady Eidson
Comment 2 2026-05-23 21:04:09 PDT
EWS
Comment 3 2026-05-24 10:16:47 PDT
Committed 313814@main (523b810325c4): <https://commits.webkit.org/313814@main> Reviewed commits have been landed. Closing PR #65548 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.